--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 BOT_TOKEN=YOUR_TOKEN
 BOT_GUILD_ID=YOUR_GUILD_ID
 CHANNEL_ID=YOUR_CHANNEL_ID
+
 TESTING_CHANNEL_ID=YOUR_CHANNEL_ID_FOR_TESTING
 TESTING=0_OR_1
+
+GPT=YOUR_KEY
